--- a/CSS/style.css
+++ b/CSS/style.css
@@ -30,23 +30,6 @@
     background-color: #525252;
 }
 
-.row-table {
-    display: table;
-}
-
-.section-column {
-    display: table-cell;
-    padding: 0 30px 30px;
-    float: none;
-}
-
-.section-heading {
-    font-family: "Exo", sans-serif;
-    font-weight: 300;
-    margin-top: 25px;
-    margin-bottom: 40px;
-}
-
 /* ----------------------------------------Special paddings/margins/text */
 
 h1,
@@ -229,7 +212,7 @@ footer {
 }
 
 #footer-details {
-    padding: 20px
+    padding: 20px;
 }
 
 /* ----------------------------------------Three Reasons */
@@ -276,4 +259,25 @@ footer {
 .personal-info-item .value {
     position: relative;
     width: 60%;
+}
+
+/* ----------------------------------------Skills */
+
+.progress {
+    position: relative;
+    height: 25px;
+    margin-bottom: 4px;
+}
+
+.progress-type {
+    position: absolute;
+    left: 0px;
+    font-weight: 400;
+    padding: 3px 30px 2px 10px;
+    color: #fafafa;
+    background-color: rgba(25, 25, 25, 0.2);
+}
+
+.progress-section {
+    margin: 40px 20px;
 }
